use custom protobuf

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/cyraxx/node-pogo-protos#readme",
   "dependencies": {
-    "protobufjs": "^5.0.1"
+    "protobufjs": "https://github.com/chaodoze/protobuf.js.git"
   },
   "devDependencies": {
     "proto2ts": "git://github.com/cyraxx/Proto2TypeScript",
